# RayTracing

./: README.md
raytracer/: Cargo.toml
raytracer/src/: main.rs
raytracer/src/basic/: camera.rs  mod.rs  ray.rs  vec3.rs
raytracer/src/object/: aabb.rs  aarect.rs  boxes.rs  bvh.rs  constant_medium.rs  hittable.rs  hittable_list.rs  image_texture.rs  material.rs  mod.rs  obj_file.rs  perlin.rs  sphere.rs  texture.rs  translation.rs  triangle.rs
