[package]
name = "more"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.0"
console = "0.9.1"
indicatif = "0.16.2"
rand = "0.8.5"
num = "0.4.0"
tobj = { version = "4.0.0", default-features = false, features = ["use_f64"] }
